<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    tools:context=".activites.ThaisActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/img_th"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/scrollNest"
        android:descendantFocusability="beforeDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/layoutType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/layoutDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:text="Thais bufo "
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/layoutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutType" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/desth"
            android:textColor="#8D8585"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutDescription" />
        <TextView
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tajawal_regular"
                android:text="@string/family"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20ssp"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        <TextView
                android:id="@+id/layoutFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tajawal_regular"
                android:text="Family THAIDIDAE"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/family"/>
        <TextView
            android:id="@+id/layoutgallary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tajawal_regular"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/gallary"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/layoutFamily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/layoutPictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutgallary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <GridView
                android:id="@+id/gridViewthais"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210sdp"
                android:horizontalSpacing="@dimen/_5sdp"
                android:numColumns="3"
                android:gravity="center"
                android:verticalSpacing="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:id="@+id/backthais"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0599998"
        android:background="@drawable/round_rect_shape"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>